--- a/infrastructure/namespace.yaml
+++ b/infrastructure/namespace.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Namespace
-metadata:
+meta
   name: database
 ---
 apiVersion: v1
 kind: Namespace
-metadata:
+meta
   name: wordpress
