--- a/clusters/production/kustomization.yaml
+++ b/clusters/production/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../infrastructure/namespace.yaml
-  - databases/
-  - applications/
+  - ../../infrastructure/namespace.yaml
+  - ../../applications
+  - ../../databases
